# debughidevent

./: CMakeLists.txt  README.md  rebuild.sh  rebuild_armhf.sh  rebuild_dev.sh
.github/workflows/: build_release.yml  build_release_armhf.yml  build_release_x64.yml
DEBIAN/: control
DEBIANARMHF/: control
src/: CMakeLists.txt  debughidevent.c
